Bug 954914 - Style visible tabs in all-tabs menu like Firefox does, r=florian.

--- a/im/themes/tabbrowser-gnomestripe/tabbrowser.css
+++ b/im/themes/tabbrowser-gnomestripe/tabbrowser.css
@@ -217,3 +217,8 @@
 .alltabs-item[selected="true"] {
   font-weight: bold;
 }
+
+.alltabs-item[tabIsVisible] {
+  /* box-shadow instead of background-color to work around native styling */
+  box-shadow: inset -5px 0 ThreeDShadow;
+}
